--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     Hello World 
     <h1>Welcome to my Website!</h1>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam autem quae ad enim. Fuga ducimus veniam iste voluptate impedit deleniti aspernatur id minus nam, ea quo minima rerum itaque voluptas!
 </body>
 </html>
