ustida biroz ish olib bordiim

--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    Hello World 
+    <section> <h1>
+        Javokh Rustamov
+    </h1>
+         
+<img src="photo_2022-11-10_17-06-53.jpg" alt="">
     <h1>Welcome to my Website!</h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam autem quae ad enim. Fuga ducimus veniam iste voluptate impedit deleniti aspernatur id minus nam, ea quo minima rerum itaque voluptas!
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam autem quae ad enim. Fuga ducimus veniam iste voluptate impedit deleniti aspernatur id minus nam, ea quo minima rerum itaque voluptas!</p>
+    </section>
+   
+
+    
 </body>
 </html>
